# iondb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  claude.yml
apps/edge-config/: Cargo.toml
apps/edge-config/src/: main.rs
apps/fleet-telemetry/: Cargo.toml
apps/fleet-telemetry/src/: main.rs
apps/sensor-log/: Cargo.toml
apps/sensor-log/src/: main.rs
docs/reference/: harness-engineering.md
docs/requirements/harness/: v0.md  v0_completion_report_0.md
docs/requirements/initial/: phase_0_completion_report_0.md  phase_1_completion_report_0.md  v0.md
docs/superpowers/plans/: 2026-04-05-phase2-wal.md
docs/superpowers/specs/: 2026-04-05-phase2-wal-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_wal_operations.rs  fuzz_wal_record_decode.rs  fuzz_wal_recovery.rs
iondb-alloc/: CLAUDE.md  Cargo.toml
iondb-alloc/src/: bump.rs  lib.rs  static_pool.rs  static_pool_tests.rs
iondb-buffer/: CLAUDE.md  Cargo.toml
iondb-buffer/src/: lib.rs
iondb-core/: CLAUDE.md  Cargo.toml
iondb-core/src/: crc.rs  endian.rs  error.rs  lib.rs  page.rs  test_utils.rs  types.rs
iondb-core/src/traits/: codec.rs  io_backend.rs  memory_allocator.rs  mod.rs  storage_engine.rs
iondb-facade/: CLAUDE.md  Cargo.toml
iondb-facade/src/: lib.rs
iondb-io/: CLAUDE.md  Cargo.toml
iondb-io/src/: failpoint.rs  lib.rs  memory.rs
iondb-query/: CLAUDE.md  Cargo.toml
iondb-query/src/: lib.rs
iondb-storage/: CLAUDE.md  Cargo.toml
iondb-storage/benches/: storage_benchmarks.rs
iondb-storage/src/: bptree.rs  lib.rs
iondb-storage/src/bptree/: mod.rs  node.rs  tests.rs
iondb-storage/src/hash/: bucket.rs  extendible.rs  extendible_tests.rs  linear.rs  mod.rs
iondb-storage/tests/: property_tests.proptest-regressions  property_tests.rs
iondb-tx/: CLAUDE.md  Cargo.toml
iondb-tx/src/: lib.rs
iondb-wal/: CLAUDE.md  Cargo.toml
iondb-wal/src/: config.rs  cursor.rs  flat.rs  lib.rs  paged.rs  paged_tests.rs  record.rs  recovery.rs  recovery_tests.rs  wal.rs
iondb-wal/src/wal/: compact.rs  mod.rs  queries.rs  scan.rs  tests.rs
iondb-wal/tests/: property_tests.rs
scripts/: check-binary-size.sh  check-ram-budget.sh  feature-matrix.sh
tests/structural/: Cargo.toml
tests/structural/src/: dependency_tests.rs  file_size_tests.rs  lib.rs  naming_tests.rs  pattern_tests.rs
