[package]
name = "iondb-wal"
description = "Write-ahead log for IonDB — no_std compatible"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
std = ["iondb-core/std"]
alloc = ["iondb-core/alloc"]

[dependencies]
iondb-core.workspace = true

[dev-dependencies]
proptest = "1.10"
iondb-io = { workspace = true, features = ["io-mem", "failpoint"] }

[lints]
workspace = true
