[package]
name = "sensor-log"
description = "Tier 1 dogfood app: bare-metal sensor logger on Cortex-M0"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sensor-log"
path = "src/main.rs"

[dependencies]
iondb-core.workspace = true
iondb-storage.workspace = true
iondb-io.workspace = true

[features]
default = []

[lints]
workspace = true
